--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
     "nanoid": "^3.3.6",
+    "node-pg-migrate": "^6.2.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0"
   },
