--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
   "scripts": {
     "start": "node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src",
+    "lint": "eslint ./",
     "migrate": "node-pg-migrate"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
     "dotenv": "^16.3.1",
+    "gitignore": "^0.7.0",
     "joi": "^17.9.2",
     "nanoid": "^3.3.6",
     "node-pg-migrate": "^6.2.2",
     "nodemon": "^2.0.22",
-    "pg": "^8.11.0"
+    "pg": "^8.11.1"
   },
   "devDependencies": {
-    "eslint": "^8.43.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
   }
