--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "gitignore": "^0.7.0",
     "joi": "^17.9.2",
